src/c/dynamics.h

/**
 * @brief A quaternion stored as scalar component followed by vector terms.
 */
typedef struct
{
    /**
     * Scalar quaternion component.
    */
    double w;
    /**
     * First vector quaternion component.
    */
    double x;
    /**
     * Second vector quaternion component.
    */
    double y;
    /**
     * Third vector quaternion component.
    */
    double z;
} c_quaternion;
/**
 * @}
 */

/**
 * @defgroup dynamics_quaternion Quaternion operations
 * @{
 */
/**
 * Construct a quaternion from four scalar components.
 * @param x Four components in w,x,y,z order.
 * @param q Output quaternion.
 */
void c_quaternion_from_array(const double x[4], c_quaternion *q);
/**
 * Construct a quaternion from a rotation matrix.
 * @param x Rotation matrix.
 * @param ldx Leading dimension of x.
 * @param q Output quaternion.
 */
void c_quaternion_from_matrix(const double *x, int ldx, c_quaternion *q);
/**
 * Construct a quaternion from angle-axis data.
 * @param angle Rotation angle in radians.
 * @param axis Unit rotation axis.
 * @param q Output quaternion.
 */
void c_quaternion_from_angle_axis(double angle, const double axis[3], 
    c_quaternion *q);
/**
 * Normalize a quaternion in place.
 * @param q Quaternion updated in place.
 */
void c_quaternion_normalize(c_quaternion *q);
/**
 * Add two quaternions.
 * @param x First quaternion.
 * @param y Second quaternion.
 * @param q Output quaternion.
 */
void c_quaternion_add(const c_quaternion *x, const c_quaternion *y,
    c_quaternion *q);
/**
 * Subtract two quaternions.
 * @param x First quaternion.
 * @param y Second quaternion.
 * @param q Output quaternion.
 */
void c_quaternion_subtract(const c_quaternion *x, const c_quaternion *y,
    c_quaternion *q);
/**
 * Multiply two quaternions.
 * @param x First quaternion.
 * @param y Second quaternion.
 * @param q Output quaternion.
 */
void c_quaternion_multiply(const c_quaternion *x, const c_quaternion *y,
    c_quaternion *q);
   
/**
 * Divide two quaternions.
 * @param x Numerator quaternion.
 * @param y Denominator quaternion.
 * @param q Output quaternion.
 */
void c_quaternion_divide(const c_quaternion *x, const c_quaternion *y,
    c_quaternion *q);
   
/**
 * Scale a quaternion.
 * @param x Scale factor.
 * @param y Input quaternion.
 * @param q Output quaternion.
 */
void c_quaternion_scale(double x, const c_quaternion *y, c_quaternion *q);
/**
 * Compute a quaternion conjugate.
 * @param q Input quaternion.
 * @param qc Output conjugate.
 */
void c_quaternion_conjugate(const c_quaternion *q, c_quaternion *qc);
/**
 * Rotate a vector using a quaternion.
 * @param q Rotation quaternion.
 * @param r Input vector.
 * @param rp Output rotated vector.
 */
void c_quaternion_rotate(const c_quaternion *q, const double r[3], double rp[3]);
/**
 * Compute the quaternion norm.
 * @param q Quaternion.
 * @return Quaternion magnitude.
 */
double c_quaternion_abs(const c_quaternion *q);
/**
 * Compute a quaternion inverse.
 * @param q Input quaternion.
 * @param qinv Output inverse.
 */
void c_quaternion_inverse(const c_quaternion *q, c_quaternion *qinv);
/**
 * Convert a quaternion to a rotation matrix.
 * @param q Quaternion.
 * @param r Output matrix.
 * @param ldr Leading dimension of r.
 */
void c_quaternion_to_matrix(const c_quaternion *q, double *r, int ldr);
/**
 * Convert a quaternion to angle-axis data.
 * @param q Quaternion.
 * @param angle Output angle.
 * @param axis Output axis.
 */
void c_quaternion_to_angle_axis(const c_quaternion *q, double *angle, double axis[3]);
/**
 * Compute the quaternion exponential.
 * @param q Input quaternion.
 * @param rst Output quaternion.
 */
void c_quaternion_exp(const c_quaternion *q, c_quaternion *rst);
/**
 * Compute the quaternion logarithm.
 * @param q Input quaternion.
 * @param rst Output quaternion.
 */
void c_quaternion_log(const c_quaternion *q, c_quaternion *rst);
/**
 * Raise a quaternion to a real power.
 * @param q Input quaternion.
 * @param exponent Power.
 * @param rst Output quaternion.
 */
void c_quaternion_pow(const c_quaternion *q, double exponent, c_quaternion *rst);
/**
 * Compute the quaternion dot product.
 * @param x First quaternion.
 * @param y Second quaternion.
 * @return Dot product.
 */
double c_quaternion_dot_product(const c_quaternion *x, const c_quaternion *y);
/**
 * Convert a quaternion to roll, pitch, and yaw angles.
 * @param q Quaternion.
 * @param roll Output roll.
 * @param pitch Output pitch.
 * @param yaw Output yaw.
 */
void c_quaternion_to_roll_pitch_yaw(const c_quaternion *q, double *roll, 
    double *pitch, double *yaw);